<resources>
    <string name="app_name">Empress 2Way 4.0</string>
    <string name="login_title">Member Login</string>
    <string name="login_subtitle">Empress Two Way 4.0 Portal</string>
    <string name="member_id">Member ID</string>
    <string name="password">Password</string>
    <string name="login">Login to Account</string>
    <string name="don_t_have_an_account">Don\'t have an account? Register Now</string>
    <string name="register_title">Member Registration</string>
    <string name="sponsor_id">Sponsor ID</string>
    <string name="epin_code">ePIN Code</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Activate Position</string>
    <string name="already_have_an_account">Already registered? Login</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_genealogy">Genealogy</string>
    <string name="nav_wallet">Wallets</string>
    <string name="nav_rebirths">Rebirths</string>
    <string name="nav_profile">Profile &amp; KYC</string>
    <string name="logout">Logout</string>
</resources>
