<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_genealogy"
        android:icon="@drawable/ic_tree"
        android:title="@string/nav_genealogy" />
    <item
        android:id="@+id/nav_wallet"
        android:icon="@drawable/ic_wallet"
        android:title="@string/nav_wallet" />
    <item
        android:id="@+id/nav_rebirths"
        android:icon="@drawable/ic_rebirth"
        android:title="@string/nav_rebirths" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>
